change share to button

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,8 +14,8 @@
     <span>{{ title }}</span>
   </div>
   <div>
-    <a href="https://github.com/georgestamati/mission-planner">
+    <button mat-icon-button (click)="goToGithubPage()">
       <mat-icon>share</mat-icon>
-    </a>
+    </button>
   </div>
 </mat-toolbar>
