--- a/src/app/components/player/player.component.html
+++ b/src/app/components/player/player.component.html
@@ -1,1 +1,34 @@
-<p>player works!</p>
+<div class="player-container">
+  <div class="points-list">
+    <h2>Points List</h2>
+    @if(points.length){
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="index">
+        <th mat-header-cell *matHeaderCellDef>Index</th>
+        <td mat-cell *matCellDef="let point; let i = index">{{ i + 1 }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let point">{{ point.name }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    } @else {
+    <div>There are no points added. Go to Planner page and add some points.</div>
+    }
+  </div>
+  <div class="visualization-area">
+    <h2>Visualization Area</h2>
+    <svg #visualizationArea width="100%" height="400"></svg>
+
+    <div class="controls">
+      <button mat-flat-button color="primary" (click)="playMission()" [disabled]="isPlaying">
+        <mat-icon>play_arrow</mat-icon>
+      </button>
+      <button mat-flat-button color="warn" (click)="stopMission()"><mat-icon>stop</mat-icon></button>
+    </div>
+  </div>
+</div>
